Edited the model card docs

--- a/docs/api-documentation/api-reference/generates-an-invoice-based-on-provided-instructions.api.mdx
+++ b/docs/api-documentation/api-reference/generates-an-invoice-based-on-provided-instructions.api.mdx
@@ -1,6 +1,6 @@
 ---
 id: generates-an-invoice-based-on-provided-instructions
-title: "Generates Invoice Endpoint"
+title: API Reference
 description: "Generates an invoice based on provided instructions."
 hide_title: true
 hide_table_of_contents: true
