Further edited the pages under Documentation Tooling because I created PR to the actual PixiEditor repo

--- a/docs/documentation-tooling/intro.mdx
+++ b/docs/documentation-tooling/intro.mdx
@@ -148,3 +148,9 @@ Step-by-step guide to creating procedural animations.
 | Screenshots & Image Editing Tools | Capturing and annotating improvements |
 
 ---
+
+## Link to the pull request
+For each page, I created a new branch to make it easy for review. Here are the links to each pull request:
+- Getting started page: [Pull request](https://github.com/PixiEditor/PixiEditor.net-Docs/pull/11)
+- Create a Node graph page: [Pull request](https://github.com/PixiEditor/PixiEditor.net-Docs/pull/12)
+- Procedural animations page: [Pull request](https://github.com/PixiEditor/PixiEditor.net-Docs/pull/13)
