Edited Docs Tooling Folder

--- a/docs/documentation-tooling/intro.mdx
+++ b/docs/documentation-tooling/intro.mdx
@@ -21,7 +21,7 @@ This project focused on auditing and restructuring documentation for PixiEditor 
 
 The documentation plays a key role in helping users get started with these features. As part of this project, I identified usability issues and proposed structural improvements to make the documentation more user-friendly.  
 
-## Scope of Work
+## Scope of work
 
 I performed the following tasks:  
 
@@ -149,10 +149,9 @@ Step-by-step guide to creating procedural animations.
 
 ---
 
-/*
-## Link to the pull request
+
+## The pull requests
 For each page, I created a new branch to make it easy for review. Here are the links to each pull request:
 - Getting started page: [Pull request](https://github.com/PixiEditor/PixiEditor.net-Docs/pull/11)
 - Create a Node graph page: [Pull request](https://github.com/PixiEditor/PixiEditor.net-Docs/pull/12)
 - Procedural animations page: [Pull request](https://github.com/PixiEditor/PixiEditor.net-Docs/pull/13)
-*/
