Edited the workflow files

--- a/docs/documentation-tooling/intro.mdx
+++ b/docs/documentation-tooling/intro.mdx
@@ -137,7 +137,7 @@ Step-by-step guide to creating procedural animations.
 
 ---
 
-## 🛠 Tools & tech stack used
+## Tools & tech stack used
 
 | Tool / Technology | Purpose |
 |-------------------|---------|
