Formatted random pages from various folders

--- a/docs/api-documentation/api-reference/generates-an-invoice-based-on-provided-instructions.api.mdx
+++ b/docs/api-documentation/api-reference/generates-an-invoice-based-on-provided-instructions.api.mdx
@@ -1,6 +1,6 @@
 ---
 id: generates-an-invoice-based-on-provided-instructions
-title: API reference with Redocly
+title: API reference with a plugin
 description: "Generate an invoice based on provided instructions"
 hide_title: true
 hide_table_of_contents: true
