Edited the vale workflow

--- a/docs/documentation-tooling/intro.mdx
+++ b/docs/documentation-tooling/intro.mdx
@@ -13,7 +13,7 @@ import editedAnims from './img/procedural-animations-edited.png';
 
 
 
-# Documentation tooling overview 
+# Documentation auditing overview 
 This project focused on auditing and restructuring documentation for PixiEditor using Docusaurus. The goal was to enhance clarity, improve navigation, and provide a consistent user experience for both beginners and advanced users.
 
 ## About PixiEditor
