Adjusted consistency with listings and headings in intro and README files for documentation tooling, which is now Documentation auditing

--- a/docs/documentation-tooling/intro.mdx
+++ b/docs/documentation-tooling/intro.mdx
@@ -12,7 +12,6 @@ import actualAnims from './img/procedural-animations-actual.png';
 import editedAnims from './img/procedural-animations-edited.png';
 
 
-
 # Documentation auditing overview 
 This project focused on auditing and restructuring documentation for PixiEditor using Docusaurus. The goal was to enhance clarity, improve navigation, and provide a consistent user experience for both beginners and advanced users.
 
@@ -24,34 +23,29 @@ The documentation plays a key role in helping users get started with these featu
 ## Scope of work
 
 I performed the following tasks:  
-
-- **Audited existing documentation** for tone, structure, and accuracy.
-- **Restructured pages** to follow a logical flow and eliminate redundant information.
-- **Improved technical accuracy** by clarifying terminology and steps.
-- **Standardized headings and tone** for consistency across the documentation.
-
+- **Audited existing documentation** for tone, structure, and accuracy
+- **Restructured pages** to follow a logical flow and eliminate redundant information
+- **Improved technical accuracy** by clarifying terminology and steps
+- **Standardized headings and tone** for consistency across the documentation
 
 ## Improved pages
 
 :::tip  Improvements made  
 📝 Improved tone  
 📝 Clearer steps  
-📝 Restructured long, confusing paragraphs
-
+📝 Restructured long, confusing paragraphs  
 :::
 
 ### Page 1: Getting started 
 Introduces users to the basics of animations.  
 
 **Improvements made:**  
-- Grouped related information to make onboarding easier.
-- Reorganized sections to reduce cognitive overload.
+- Grouped related information to make onboarding easier
+- Reorganized sections to reduce cognitive overload
 - Properly annotated images for easy visibility
 
 
 **Example Improvement:** Clearer sentences and image with properly annotated image   
-   
-
 <div style={{ display: 'flex', gap: '20px', flexWrap: 'wrap' }}>
   <div style={{ flex: '1', textAlign: 'center' }}>
     <p><strong>Previous</strong></p>
@@ -64,21 +58,15 @@ Introduces users to the basics of animations.
   </div>
 </div>
 
-
-
 ---
 
-### Page 2: Create a node graph
+### Page 2: Create a Node Graph
 Guides users on how to create their first Node Graph in PixiEditor.  
 **Improvements made:**
-
-- Extracted the **Node Type** information from a collapsible summary and turned it into a **dedicated heading** for better visibility.
-- Reorganized steps for logical flow.
-
+- Extracted the **Node Type** information from a collapsible summary and turned it into a **dedicated heading** for better visibility
+- Reorganized steps for logical flow
 
 **Example Improvement:** Clearer sentences and reorganized steps for logical flow
-   
-
 <div style={{ display: 'flex', gap: '20px', flexWrap: 'wrap' }}>
   <div style={{ flex: '1', textAlign: 'center' }}>
     <p><strong>Previous</strong></p>
@@ -93,19 +81,15 @@ Guides users on how to create their first Node Graph in PixiEditor.
 
 ---
 
-
 ### Page 3: Procedural animations
 Step-by-step guide to creating procedural animations.   
 
 **Improvements made:**
-
-- Simplified tone to be more beginner-friendly.
-- Standardized heading levels for better readability.
-- Removed redundant explanations and clarified technical steps.
+- Simplified tone to be more beginner-friendly
+- Standardized heading levels for better readability
+- Removed redundant explanations and clarified technical steps
 
 **Example Improvement:** Clearer sentences and reorganized steps for logical flow
-   
-
 <div style={{ display: 'flex', gap: '20px', flexWrap: 'wrap' }}>
   <div style={{ flex: '1', textAlign: 'center' }}>
     <p><strong>Previous</strong></p>
@@ -118,22 +102,18 @@ Step-by-step guide to creating procedural animations.
   </div>
 </div>
 
-
-
-
 ---
 
 ## Challenges
-- Maintaining beginner-friendly explanations while improving technical depth.
-- Ensuring restructuring didn’t break links or navigation paths.
-
+- Maintaining beginner-friendly explanations while improving technical depth
+- Ensuring restructuring didn’t break links or navigation paths
 ---
 
 ## Key takeaways
 
-- Consistency is key: A consistent structure and tone improve user confidence and comprehension.
-- Docs-as-code workflow matters: I learned to use version control (Git) and Docusaurus efficiently for iterative documentation improvement.
-- Empathy for users: Reviewing feedback and testing changes helped me prioritize clarity for first-time users.
+- Consistency is key: A consistent structure and tone improve user confidence and comprehension
+- Docs-as-code workflow matters: I learned to use version control (Git) and Docusaurus efficiently for iterative documentation improvement
+- Empathy for users: Reviewing feedback and testing changes helped me prioritize clarity for first-time users
 
 ---
 
@@ -148,7 +128,6 @@ Step-by-step guide to creating procedural animations.
 | Screenshots & Image Editing Tools | Capturing and annotating improvements |
 
 ---
-
 
 ## The pull requests
 For each page, I created a new branch to make it easy for review. Here are the links to each pull request:
